tests/errors/syntax_missing_brace.js
/*
Expected Error:
SyntaxError
*/
function hello() {
  console.log("hello");
